[package]
name = "buildkit-frontend"
version = "0.3.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

description = "Foundation for BuildKit frontends implemented in Rust"
documentation = "https://docs.rs/buildkit-frontend"
repository = "https://github.com/denzp/rust-buildkit"
readme = "README.md"
keywords = ["buildkit", "docker", "bridge"]
categories = ["development-tools::build-utils", "api-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
bytes = "1.6.0"
either = "1.10"
failure = "0.1"
futures = "0.3"
libc = "0.2"
log = "0.4"
mio = "0.6"
pin-project = "1.1"
serde_json = "1.0"
tonic = "0.1"
tower = { version = "0.4", features = ["util"] }

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["io-std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.buildkit-proto]
version = "0.2"
path = "../buildkit-proto"

[dependencies.buildkit-llb]
version = "0.2"
path = "../buildkit-llb"

[dev-dependencies]
async-trait = "0.1"
env_logger = "0.11"
pretty_assertions = "1.4"
regex = "1.10"
url = "2.5"

[dev-dependencies.tokio]
version = "0.2"
features = ["macros", "rt-core", "rt-threaded"]
